intTests/test_type_errors/unify011.log.good
Loading file "unify011.saw"
Type errors:
  unify011.saw:12:2-12:19: Monadic bind of non-monadic value; rewrite as let-binding or use return
  unify011.saw:12:14-12:19: Error: Type mismatch.
    Expected: Int
    Found:    String

  unify011.saw:12:6-12:9: Note: The type Int arises from this type annotation
  unify011.saw:12:14-12:19: Note: The type String arises from the type of this term


FAILED
